--- a/package.json
+++ b/package.json
@@ -14,5 +14,14 @@
   "bugs": {
     "url": "https://github.com/marcelo-cardozo/whatsapp-node-server/issues"
   },
-  "homepage": "https://github.com/marcelo-cardozo/whatsapp-node-server#readme"
+  "homepage": "https://github.com/marcelo-cardozo/whatsapp-node-server#readme",
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "whatsapp-web.js": "^1.9.0"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.8",
+    "@types/node": "^14.11.10"
+  }
 }
