--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "start": "tsc && node dist/app.js"
+    "dev": "nodemon src/app.ts",
+    "dev:debug": "nodemon --inspect src/app.ts"
   },
   "repository": {
     "type": "git",
@@ -22,6 +23,9 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.8",
-    "@types/node": "^14.11.10"
+    "@types/node": "^14.11.10",
+    "nodemon": "^2.0.5",
+    "ts-node": "^9.0.0",
+    "typescript": "^4.0.3"
   }
 }
