--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
   "devDependencies": {
     "@types/express": "^4.17.8",
     "@types/node": "^14.11.10",
+    "@types/ws": "^7.2.7",
     "nodemon": "^2.0.5",
     "ts-node": "^9.0.0",
-    "typescript": "^4.0.3"
+    "typescript": "^4.0.3",
+    "ws": "^7.3.1"
   }
 }
