--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
   },
   "homepage": "https://github.com/marcelo-cardozo/whatsapp-node-server#readme",
   "dependencies": {
+    "@types/qr-image": "^3.2.3",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "qr-image": "^3.2.0",
     "whatsapp-web.js": "^1.9.0"
   },
   "devDependencies": {
